# proyecto-despliegue-de-soluciones

./: .env.example  .gitattributes  .gitignore  README.md  bert-nlptown.py  canine.ipynb  deepseekr1-qwen-mlflow.py  deepseekr1-qwen.py  distilbert.ipynb  distilgpt2.ipynb  finiteautomata.py  gemma3-mlflow.py  gemma3.py  gpt2-mlflow.py  gpt2.py  llama32-mlflow.py  llama32.py  requirements.txt  test.py
analysis/: haha-dataset-analysis.ipynb  stupid_stuff_translation.ipynb  train-analysis.ipynb  translation.ipynb
dashboard/: app.py  requirements.txt  utils.py
data/: generated_jokes.csv  test.csv  train.csv  train_multilingual.csv
data/classification/: test.csv  train.csv  train_multilingual.csv
data/detection/: long_lengths.csv  short_lengths.csv  test.csv  test_exclusive.csv  train.csv  (+2 more)
experiments/: bertdccuchile.py  bloom.py  canine.py  dccuchile.py  deepseek-qwen.py  deepseek-r1-distill-qwen.py  distilbert.py  distilbertlxyuan.py  distilgpt2.py  gemini.py  gemma3.py  gpt2.py  llama3.py  llama32.py  lxyuan.py  textdetox.py
humor-detection/: pyproject.toml
humor-detection/humor_detection/: dataset.py  decoder.py  encoder.py  llm.py  predict.py  test.py  test_llm.py  train.py  utils.py
train_logs/: bloom_classification.csv  bloom_detection.csv  canine_classification.csv  canine_detection.csv  dccuchile_classification.csv  dccuchile_detection.csv  distilbert_classification.csv  distilbert_detection.csv  distilgpt2_classification.csv  distilgpt2_detection.csv  lxyuan_classification.csv  lxyuan_detection.csv  textdetox_classification.csv  textdetox_detection.csv
(+1380 files in other folders)
