[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humor-detection"
version = "1.0.0"
description = ""
dependencies = [
    "bitsandbytes==0.45.5",
    "datasets==3.5.0",
    "google-genai==1.15.0",
    "mlflow==2.22.0",
    "peft==0.15.1",
    "protobuf==6.30.2",
    "python-dotenv==1.1.0",
    "scikit-learn==1.6.1",
    "torch==2.7.0",
    "transformers==4.51.1",
    "ydata-profiling==4.12.2"
]
